--- a/package.json
+++ b/package.json
@@ -8,8 +8,13 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "axios": "^0.19.2",
+    "codemirror": "^5.53.2",
     "formik": "^2.1.4",
+    "pusher-js": "^6.0.3",
+    "pushid": "^1.0.0",
     "react": "^16.13.1",
+    "react-codemirror2": "^7.1.0",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
