--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.19.2",
     "codemirror": "^5.53.2",
     "formik": "^2.1.4",
+    "node-sass": "^4.14.1",
     "pusher-js": "^6.0.3",
     "pushid": "^1.0.0",
     "react": "^16.13.1",
