--- a/package.json
+++ b/package.json
@@ -11,14 +11,19 @@
     "axios": "^0.19.2",
     "codemirror": "^5.53.2",
     "formik": "^2.1.4",
+    "immer": "^6.0.5",
     "node-sass": "^4.14.1",
     "pusher-js": "^6.0.3",
     "pushid": "^1.0.0",
     "react": "^16.13.1",
     "react-codemirror2": "^7.1.0",
     "react-dom": "^16.13.1",
+    "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
+    "redux": "^4.0.5",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0",
     "yup": "^0.28.5"
   },
   "scripts": {
