--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.2",
+    "clsx": "^1.1.0",
     "codemirror": "^5.53.2",
     "formik": "^2.1.4",
+    "history": "^4.10.1",
     "immer": "^6.0.5",
     "node-sass": "^4.14.1",
     "pusher-js": "^6.0.3",
