Complete comment when select text in codemirror. Edit comment was submitted. Delete comment. Highlight comment when submit comment.

--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-REACT_APP_AXIOS_BASEURL = https://source-code-marking.herokuapp.com
+REACT_APP_AXIOS_BASEURL = https://staging-source-code-marking.herokuapp.com
