--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@material-ui/core": "^4.9.14",
     "@material-ui/icons": "^4.9.1",
+    "@material-ui/lab": "^4.0.0-alpha.55",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
@@ -15,6 +16,7 @@
     "history": "^4.10.1",
     "immer": "^6.0.5",
     "node-sass": "^4.14.1",
+    "prop-types": "^15.7.2",
     "pusher-js": "^6.0.3",
     "pushid": "^1.0.0",
     "react": "^16.13.1",
