fix signup, noti when sign in, sign up

--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "react-google-login": "^5.1.20",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
+    "socket.io-client": "^2.3.0",
     "styled-components": "^5.1.1",
+    "websocket": "^1.0.31",
     "yup": "^0.28.5"
   },
   "scripts": {
