--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.2",
+    "canvas": "^2.6.1",
+    "chart.js": "^2.9.3",
     "clsx": "^1.1.0",
     "codemirror": "^5.53.2",
     "formik": "^2.1.4",
